force-app/main/default/objects/Demo_System_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>