force-app/main/default/objects/Demo_System_Event__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>