force-app/main/default/objects/Demo_System_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>